# COSMIC

./: .gitignore  LICENSE.txt  README.md  index.ipynb  init.py  pyproject.toml  requirements-dev.txt  setup.py  test.ipynb
cosmic/: __init__.py  cosmic.py  utils.py
pyExtremeHelper/: __init__.py  helper.py
tests/: test_cosmic.py
