[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic"
version = "0.3.0"
description = "Ferramentas de análise para dados magnéticos da missão Cluster (ESA)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
authors = [
    { name = "B. Quirino" }
]
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.9",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
